--- a/src/pages/problem-1.html
+++ b/src/pages/problem-1.html
@@ -16,15 +16,16 @@
 
             <div class="content">
                 <div class="brightcove-player">
-                    <video-js
-                      data-account="6314466874001"
-                      data-player="VHuNQ87E0N"
-                      data-embed="default"
-                      controls=""
-                      data-video-id="6348239508112"
-                      data-playlist-id=""
-                      data-application-id=""
-                      class="vjs-fluid">
+                    <video-js    
+                        id="brightcove-player"
+                        data-account="6314466874001"
+                        data-player="VHuNQ87E0N"
+                        data-embed="default"
+                        controls=""
+                        data-video-id="6348239508112"
+                        data-playlist-id=""
+                        data-application-id=""
+                        class="vjs-fluid">
                     </video-js>
                 </div>
             </div>
@@ -37,5 +38,6 @@
         </div>
     </div>
     <script src="https://players.brightcove.net/6314466874001/VHuNQ87E0N_default/index.min.js"></script>
+    <script src="./../assets/js/problem-1.js"></script>
 </body>
 </html>
